# serializer version: 1
# name: test_build_example
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-8597e52a/example-8597e52a-0.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_8597e52a"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_8597e52a"]
        
        [project]
        name = "example-8597e52a"
        version = "0.0.0"
        dependencies = [
            "example-a-8597e52a",
        ]
        requires-python = ">=3.8"
        description = "This is an example scenario, in which the user depends on a single package `a` which requires `b`."
        
        [project.optional-dependencies]
  
      ''',
      'build/example-8597e52a/example-8597e52a-0.0.0/src/example_8597e52a/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'build/example-8597e52a/example-a-8597e52a-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_a_8597e52a"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_a_8597e52a"]
        
        [project]
        name = "example-a-8597e52a"
        version = "1.0.0"
        dependencies = [
            "example-b-8597e52a>1.0.0",
        ]
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-8597e52a/example-a-8597e52a-1.0.0/src/example_a_8597e52a/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-8597e52a/example-b-8597e52a-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_8597e52a"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_8597e52a"]
        
        [project]
        name = "example-b-8597e52a"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-8597e52a/example-b-8597e52a-1.0.0/src/example_b_8597e52a/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-8597e52a/example-b-8597e52a-2.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_8597e52a"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_8597e52a"]
        
        [project]
        name = "example-b-8597e52a"
        version = "2.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-8597e52a/example-b-8597e52a-2.0.0/src/example_b_8597e52a/__init__.py': '''
        __version__ = "2.0.0"
  
      ''',
      'build/example-8597e52a/example-b-8597e52a-3.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_8597e52a"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_8597e52a"]
        
        [project]
        name = "example-b-8597e52a"
        version = "3.0.0"
        dependencies = [
            "example-c-8597e52a",
        ]
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-8597e52a/example-b-8597e52a-3.0.0/src/example_b_8597e52a/__init__.py': '''
        __version__ = "3.0.0"
  
      ''',
      'dist/example-8597e52a/example_8597e52a-0.0.0.tar.gz': 'md5:17043246e6b9a0d3caddb3234e139793',
      'dist/example-8597e52a/example_a_8597e52a-1.0.0-py3-none-any.whl': 'md5:7ab2bff602993c20a551796c18e1b56c',
      'dist/example-8597e52a/example_a_8597e52a-1.0.0.tar.gz': 'md5:f962490d420b3b54f7c932d52697aa7b',
      'dist/example-8597e52a/example_b_8597e52a-1.0.0-py3-none-any.whl': 'md5:674c558882b69a0a24371505dcd151b5',
      'dist/example-8597e52a/example_b_8597e52a-1.0.0.tar.gz': 'md5:bbfcf89bd3218d754cd1715d8517fdf7',
      'dist/example-8597e52a/example_b_8597e52a-2.0.0-py3-none-any.whl': 'md5:511c26ff4d9ee74ea82cb9180f826955',
      'dist/example-8597e52a/example_b_8597e52a-2.0.0.tar.gz': 'md5:214589332a7affff9c4a02295416ac56',
      'dist/example-8597e52a/example_b_8597e52a-3.0.0-py3-none-any.whl': 'md5:c7854706bb6ccccc63d915fc4e3b966c',
      'dist/example-8597e52a/example_b_8597e52a-3.0.0.tar.gz': 'md5:e88664e25dc512798151487a66c0d18f',
      'tree': '''
        test_build_example0
        ├── build
        │   └── example-8597e52a
        │       ├── example-8597e52a-0.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_8597e52a
        │       │           └── __init__.py
        │       ├── example-a-8597e52a-1.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_a_8597e52a
        │       │           └── __init__.py
        │       ├── example-b-8597e52a-1.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_8597e52a
        │       │           └── __init__.py
        │       ├── example-b-8597e52a-2.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_8597e52a
        │       │           └── __init__.py
        │       └── example-b-8597e52a-3.0.0
        │           ├── pyproject.toml
        │           └── src
        │               └── example_b_8597e52a
        │                   └── __init__.py
        └── dist
            └── example-8597e52a
                ├── example_8597e52a-0.0.0.tar.gz
                ├── example_a_8597e52a-1.0.0-py3-none-any.whl
                ├── example_a_8597e52a-1.0.0.tar.gz
                ├── example_b_8597e52a-1.0.0-py3-none-any.whl
                ├── example_b_8597e52a-1.0.0.tar.gz
                ├── example_b_8597e52a-2.0.0-py3-none-any.whl
                ├── example_b_8597e52a-2.0.0.tar.gz
                ├── example_b_8597e52a-3.0.0-py3-none-any.whl
                └── example_b_8597e52a-3.0.0.tar.gz
        
        19 directories, 19 files
  
      ''',
    }),
    'stderr': '<not included>',
    'stdout': '''
      example-8597e52a
  
    ''',
  })
# ---
# name: test_build_example_already_exists
  dict({
    'exit_code': 1,
    'filesystem': dict({
      'tree': '''
        test_build_example_already_exi0
        └── build
            └── example-8597e52a
        
        2 directories
  
      ''',
    }),
    'stderr': '''
      Building 'example-8597e52a' in directory 'build/example-8597e52a'
      Destination directory '[PWD]/build/example-8597e52a' already exists. Pass `--rm` to allow removal.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_build_example_already_exists_with_rm_flag
  dict({
    'exit_code': 0,
    'stderr': '<not included>',
    'stdout': '''
      example-8597e52a
  
    ''',
  })
# ---
# name: test_build_example_short_names
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-8597e52a/a-8597e52a-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/a_8597e52a"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/a_8597e52a"]
        
        [project]
        name = "a-8597e52a"
        version = "1.0.0"
        dependencies = [
            "b-8597e52a>1.0.0",
        ]
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-8597e52a/a-8597e52a-1.0.0/src/a_8597e52a/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-8597e52a/b-8597e52a-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/b_8597e52a"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/b_8597e52a"]
        
        [project]
        name = "b-8597e52a"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-8597e52a/b-8597e52a-1.0.0/src/b_8597e52a/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-8597e52a/b-8597e52a-2.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/b_8597e52a"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/b_8597e52a"]
        
        [project]
        name = "b-8597e52a"
        version = "2.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-8597e52a/b-8597e52a-2.0.0/src/b_8597e52a/__init__.py': '''
        __version__ = "2.0.0"
  
      ''',
      'build/example-8597e52a/b-8597e52a-3.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/b_8597e52a"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/b_8597e52a"]
        
        [project]
        name = "b-8597e52a"
        version = "3.0.0"
        dependencies = [
            "c-8597e52a",
        ]
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-8597e52a/b-8597e52a-3.0.0/src/b_8597e52a/__init__.py': '''
        __version__ = "3.0.0"
  
      ''',
      'build/example-8597e52a/example-8597e52a-0.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_8597e52a"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_8597e52a"]
        
        [project]
        name = "example-8597e52a"
        version = "0.0.0"
        dependencies = [
            "a-8597e52a",
        ]
        requires-python = ">=3.8"
        description = "This is an example scenario, in which the user depends on a single package `a` which requires `b`."
        
        [project.optional-dependencies]
  
      ''',
      'build/example-8597e52a/example-8597e52a-0.0.0/src/example_8597e52a/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'dist/example-8597e52a/a_8597e52a-1.0.0-py3-none-any.whl': 'md5:61369e11308ec534e33bff51af6773b2',
      'dist/example-8597e52a/a_8597e52a-1.0.0.tar.gz': 'md5:b41cb8eb42915082342c91cf002b87da',
      'dist/example-8597e52a/b_8597e52a-1.0.0-py3-none-any.whl': 'md5:7c84aa995cc1e70d6df1840c5d4099de',
      'dist/example-8597e52a/b_8597e52a-1.0.0.tar.gz': 'md5:2a887bcce9fa9a1ecab8aabdd9b6f2ee',
      'dist/example-8597e52a/b_8597e52a-2.0.0-py3-none-any.whl': 'md5:9ab7485eb1e12d552374750af11294fe',
      'dist/example-8597e52a/b_8597e52a-2.0.0.tar.gz': 'md5:7848456b448a458bee5d7c8616c4cfef',
      'dist/example-8597e52a/b_8597e52a-3.0.0-py3-none-any.whl': 'md5:cdd8cc4a4f380e5c84781100dcc82e11',
      'dist/example-8597e52a/b_8597e52a-3.0.0.tar.gz': 'md5:dfee22b627980c37b021f44de4120ca4',
      'dist/example-8597e52a/example_8597e52a-0.0.0.tar.gz': 'md5:3acfb96bea933ec2ec1d67f14329fbad',
      'tree': '''
        test_build_example_short_names0
        ├── build
        │   └── example-8597e52a
        │       ├── a-8597e52a-1.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── a_8597e52a
        │       │           └── __init__.py
        │       ├── b-8597e52a-1.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── b_8597e52a
        │       │           └── __init__.py
        │       ├── b-8597e52a-2.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── b_8597e52a
        │       │           └── __init__.py
        │       ├── b-8597e52a-3.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── b_8597e52a
        │       │           └── __init__.py
        │       └── example-8597e52a-0.0.0
        │           ├── pyproject.toml
        │           └── src
        │               └── example_8597e52a
        │                   └── __init__.py
        └── dist
            └── example-8597e52a
                ├── a_8597e52a-1.0.0-py3-none-any.whl
                ├── a_8597e52a-1.0.0.tar.gz
                ├── b_8597e52a-1.0.0-py3-none-any.whl
                ├── b_8597e52a-1.0.0.tar.gz
                ├── b_8597e52a-2.0.0-py3-none-any.whl
                ├── b_8597e52a-2.0.0.tar.gz
                ├── b_8597e52a-3.0.0-py3-none-any.whl
                ├── b_8597e52a-3.0.0.tar.gz
                └── example_8597e52a-0.0.0.tar.gz
        
        19 directories, 19 files
  
      ''',
    }),
    'stderr': '<not included>',
    'stdout': '''
      example-8597e52a
  
    ''',
  })
# ---
# name: test_build_example_with_seed
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-f4e71829/example-a-f4e71829-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_a_f4e71829"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_a_f4e71829"]
        
        [project]
        name = "example-a-f4e71829"
        version = "1.0.0"
        dependencies = [
            "example-b-f4e71829>1.0.0",
        ]
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-f4e71829/example-a-f4e71829-1.0.0/src/example_a_f4e71829/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-f4e71829/example-b-f4e71829-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_f4e71829"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_f4e71829"]
        
        [project]
        name = "example-b-f4e71829"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-f4e71829/example-b-f4e71829-1.0.0/src/example_b_f4e71829/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-f4e71829/example-b-f4e71829-2.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_f4e71829"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_f4e71829"]
        
        [project]
        name = "example-b-f4e71829"
        version = "2.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-f4e71829/example-b-f4e71829-2.0.0/src/example_b_f4e71829/__init__.py': '''
        __version__ = "2.0.0"
  
      ''',
      'build/example-f4e71829/example-b-f4e71829-3.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_f4e71829"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_f4e71829"]
        
        [project]
        name = "example-b-f4e71829"
        version = "3.0.0"
        dependencies = [
            "example-c-f4e71829",
        ]
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-f4e71829/example-b-f4e71829-3.0.0/src/example_b_f4e71829/__init__.py': '''
        __version__ = "3.0.0"
  
      ''',
      'build/example-f4e71829/example-f4e71829-0.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_f4e71829"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_f4e71829"]
        
        [project]
        name = "example-f4e71829"
        version = "0.0.0"
        dependencies = [
            "example-a-f4e71829",
        ]
        requires-python = ">=3.8"
        description = "This is an example scenario, in which the user depends on a single package `a` which requires `b`."
        
        [project.optional-dependencies]
  
      ''',
      'build/example-f4e71829/example-f4e71829-0.0.0/src/example_f4e71829/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'dist/example-f4e71829/example_a_f4e71829-1.0.0-py3-none-any.whl': 'md5:9ee752ff1893235d940443ea8bd36cec',
      'dist/example-f4e71829/example_a_f4e71829-1.0.0.tar.gz': 'md5:a8ad8430901480e31557acb92f54a197',
      'dist/example-f4e71829/example_b_f4e71829-1.0.0-py3-none-any.whl': 'md5:e55bf39f4891d444dfa13572b4eb6c01',
      'dist/example-f4e71829/example_b_f4e71829-1.0.0.tar.gz': 'md5:b08087177f913349d8cd75bd91a7389e',
      'dist/example-f4e71829/example_b_f4e71829-2.0.0-py3-none-any.whl': 'md5:1cc6967261f76099ff03099dfec27702',
      'dist/example-f4e71829/example_b_f4e71829-2.0.0.tar.gz': 'md5:822f9d9b916cabc42504acbff3af302b',
      'dist/example-f4e71829/example_b_f4e71829-3.0.0-py3-none-any.whl': 'md5:c12cf052b90cf529cc8e049d784d4654',
      'dist/example-f4e71829/example_b_f4e71829-3.0.0.tar.gz': 'md5:8508ebe0cf8d4af4a88e85cd2e8769a0',
      'dist/example-f4e71829/example_f4e71829-0.0.0.tar.gz': 'md5:41baeca9eaf5a9fb9a5bcd71ec7a49b8',
      'tree': '''
        test_build_example_with_seed0
        ├── build
        │   └── example-f4e71829
        │       ├── example-a-f4e71829-1.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_a_f4e71829
        │       │           └── __init__.py
        │       ├── example-b-f4e71829-1.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_f4e71829
        │       │           └── __init__.py
        │       ├── example-b-f4e71829-2.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_f4e71829
        │       │           └── __init__.py
        │       ├── example-b-f4e71829-3.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_f4e71829
        │       │           └── __init__.py
        │       └── example-f4e71829-0.0.0
        │           ├── pyproject.toml
        │           └── src
        │               └── example_f4e71829
        │                   └── __init__.py
        └── dist
            └── example-f4e71829
                ├── example_a_f4e71829-1.0.0-py3-none-any.whl
                ├── example_a_f4e71829-1.0.0.tar.gz
                ├── example_b_f4e71829-1.0.0-py3-none-any.whl
                ├── example_b_f4e71829-1.0.0.tar.gz
                ├── example_b_f4e71829-2.0.0-py3-none-any.whl
                ├── example_b_f4e71829-2.0.0.tar.gz
                ├── example_b_f4e71829-3.0.0-py3-none-any.whl
                ├── example_b_f4e71829-3.0.0.tar.gz
                └── example_f4e71829-0.0.0.tar.gz
        
        19 directories, 19 files
  
      ''',
    }),
    'stderr': '<not included>',
    'stdout': '''
      example-f4e71829
  
    ''',
  })
# ---
# name: test_build_invalid_target
  dict({
    'exit_code': 1,
    'stderr': '''
      File at '[PWD]/test.json' is not a valid scenario: Input data was truncated.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_build_no_target
  dict({
    'exit_code': 2,
    'stderr': '''
      usage: packse build [-h] [--rm] [--short-names] [--no-hash] [--skip-root] [-v]
                          [-q]
                          targets [targets ...]
      packse build: error: the following arguments are required: targets
  
    ''',
    'stdout': '',
  })
# ---
# name: test_build_target_does_not_exist
  dict({
    'exit_code': 1,
    'stderr': '''
      File 'foo' not found.
  
    ''',
    'stdout': '',
  })
# ---
